Fixes for v3.6.6 (#47)
* Fix panel padding.

* Fix invisible thumbnails in Alt-Tab-Menu

--- a/src/desktops/cinnamon/scss/components/_panel.scss
+++ b/src/desktops/cinnamon/scss/components/_panel.scss
@@ -117,7 +117,7 @@
 
 .system-status-icon {
     icon-size: 16px;
-    padding: 8px 0;
+    padding: 0;
     spacing: 0;
     margin: 0;
 }
